<resources>
    <string name="app_name">ImageOperator</string>

    <string name="action_settings">Settings</string>
    <string name="select_mode">Select Mode</string>
    <string name="mode_single">Single-Choice</string>
    <string name="mode_multi">Multi-Choice</string>
    <string name="max_select_amount">Max Selected Amount</string>
    <string name="hint_default_amount">default amount is 9</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="go_select">Select</string>


    <string name="pick_photo">Pick Photo</string>
    <string name="pick_photo_without_camera">Pick Photo Without Camera &amp;&amp; Disable Preview</string>
    <string name="pick_one_photo">Pick Single Photo</string>
    <string name="pick_photo_gif">Pick Photos (show gif)</string>
    <string name="multiple_pick_photo">Multiple Pick Photo</string>

    <string name="pick_photo_add_item_label">+</string>
    <string name="pick_crashlytics_btn_label">Test Crashlytics</string>

</resources>
